--- a/Dag3-pandas/6-Kryssing.ipynb
+++ b/Dag3-pandas/6-Kryssing.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8d63f58e",
+   "execution_count": 1,
+   "id": "455fe317",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3266521",
+   "id": "95ec9340",
    "metadata": {},
    "source": [
     "### Crosstab"
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "576301b3",
+   "id": "eb80ed27",
    "metadata": {},
    "source": [
     "https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.crosstab.html"
@@ -31,20 +31,315 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cc8460fe",
+   "execution_count": 2,
+   "id": "57b56dda",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>id</th>\n",
+       "      <th>work_id</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>age</th>\n",
+       "      <th>year_birth</th>\n",
+       "      <th>work_percent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>29101946112</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Menn</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>26101930288</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Menn</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>22091952214</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Menn</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4071997222</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Menn</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>7101970642</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Menn</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29995</th>\n",
+       "      <td>29995</td>\n",
+       "      <td>15072660901</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Kvinner</td>\n",
+       "      <td>93</td>\n",
+       "      <td>1926</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29996</th>\n",
+       "      <td>29996</td>\n",
+       "      <td>23012604128</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Kvinner</td>\n",
+       "      <td>93</td>\n",
+       "      <td>1926</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29997</th>\n",
+       "      <td>29997</td>\n",
+       "      <td>14102931680</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Kvinner</td>\n",
+       "      <td>90</td>\n",
+       "      <td>1929</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29998</th>\n",
+       "      <td>29998</td>\n",
+       "      <td>29062932768</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Kvinner</td>\n",
+       "      <td>90</td>\n",
+       "      <td>1929</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29999</th>\n",
+       "      <td>29999</td>\n",
+       "      <td>11072931487</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Kvinner</td>\n",
+       "      <td>90</td>\n",
+       "      <td>1929</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>30000 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Unnamed: 0           id  work_id      sex  age  year_birth  \\\n",
+       "0               0  29101946112      NaN     Menn    0        2019   \n",
+       "1               1  26101930288      NaN     Menn    0        2019   \n",
+       "2               2  22091952214      NaN     Menn    0        2019   \n",
+       "3               3   4071997222      NaN     Menn    0        2019   \n",
+       "4               4   7101970642      NaN     Menn    0        2019   \n",
+       "...           ...          ...      ...      ...  ...         ...   \n",
+       "29995       29995  15072660901      NaN  Kvinner   93        1926   \n",
+       "29996       29996  23012604128      NaN  Kvinner   93        1926   \n",
+       "29997       29997  14102931680      NaN  Kvinner   90        1929   \n",
+       "29998       29998  29062932768      NaN  Kvinner   90        1929   \n",
+       "29999       29999  11072931487      NaN  Kvinner   90        1929   \n",
+       "\n",
+       "       work_percent  \n",
+       "0               NaN  \n",
+       "1               NaN  \n",
+       "2               NaN  \n",
+       "3               NaN  \n",
+       "4               NaN  \n",
+       "...             ...  \n",
+       "29995           NaN  \n",
+       "29996           NaN  \n",
+       "29997           NaN  \n",
+       "29998           NaN  \n",
+       "29999           NaN  \n",
+       "\n",
+       "[30000 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pop"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e61f30a8",
+   "execution_count": 3,
+   "id": "c48f5fa5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>sex</th>\n",
+       "      <th>Kvinner</th>\n",
+       "      <th>Menn</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>age</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>151</td>\n",
+       "      <td>161</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>174</td>\n",
+       "      <td>150</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>164</td>\n",
+       "      <td>184</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>168</td>\n",
+       "      <td>185</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>170</td>\n",
+       "      <td>160</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>17</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>14</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>9</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>14</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>22</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>101 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "sex  Kvinner  Menn\n",
+       "age               \n",
+       "0        151   161\n",
+       "1        174   150\n",
+       "2        164   184\n",
+       "3        168   185\n",
+       "4        170   160\n",
+       "..       ...   ...\n",
+       "96        17     6\n",
+       "97        14     7\n",
+       "98         9     6\n",
+       "99        14     7\n",
+       "100       22     6\n",
+       "\n",
+       "[101 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Antall kvinner og menn per alder\n",
     "pd.crosstab(pop['age'], pop['sex'])"
@@ -52,13 +347,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6350e153",
+   "execution_count": 4,
+   "id": "2e58b2f4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        0\n",
+       "1        0\n",
+       "2        0\n",
+       "3        0\n",
+       "4        0\n",
+       "        ..\n",
+       "29995    9\n",
+       "29996    9\n",
+       "29997    9\n",
+       "29998    9\n",
+       "29999    9\n",
+       "Name: age, Length: 30000, dtype: object"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pop['age'].astype(str).str[:1].replace('', '0')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1ca6ca9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>sex</th>\n",
+       "      <th>Kvinner</th>\n",
+       "      <th>Menn</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>age</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>47.0</td>\n",
+       "      <td>63.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>76.0</td>\n",
+       "      <td>87.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>87.0</td>\n",
+       "      <td>93.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>90.0</td>\n",
+       "      <td>97.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>88.0</td>\n",
+       "      <td>95.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>83.0</td>\n",
+       "      <td>93.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>53.0</td>\n",
+       "      <td>68.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "sex  Kvinner  Menn\n",
+       "age               \n",
+       "1       47.0  63.0\n",
+       "2       76.0  87.0\n",
+       "3       87.0  93.0\n",
+       "4       90.0  97.0\n",
+       "5       88.0  95.0\n",
+       "6       83.0  93.0\n",
+       "7       53.0  68.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Gjennomsnittlig arbeidsprosent per kjønn og tiår\n",
-    "arbprc_ald_kjonn = pd.crosstab(pop['age'].astype(str).str[:1].replace('', '0'), \n",
+    "arbprc_ald_kjonn = pd.crosstab( \n",
+    "            pop['age'].astype(str).str[:1].replace('', '0'), \n",
     "            pop['sex'], \n",
     "            values = pop['work_percent'].astype(float), \n",
     "            aggfunc = np.mean)\n",
@@ -68,10 +483,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "91f3fd89",
+   "execution_count": 6,
+   "id": "5ff550c3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>sex</th>\n",
+       "      <th>Kvinner</th>\n",
+       "      <th>Menn</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>age</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>47</td>\n",
+       "      <td>62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>75</td>\n",
+       "      <td>86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>86</td>\n",
+       "      <td>93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>89</td>\n",
+       "      <td>96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>87</td>\n",
+       "      <td>95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>83</td>\n",
+       "      <td>92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>53</td>\n",
+       "      <td>67</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "sex  Kvinner  Menn\n",
+       "age               \n",
+       "1         47    62\n",
+       "2         75    86\n",
+       "3         86    93\n",
+       "4         89    96\n",
+       "5         87    95\n",
+       "6         83    92\n",
+       "7         53    67"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Eller man kan bare konvertere til int?\n",
     "arbprc_ald_kjonn.astype(int)"
@@ -79,7 +581,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c38ec4a2",
+   "id": "912c40cd",
    "metadata": {},
    "source": [
     "### Bonus: \"En påbegynt versjon av Proc Freq\"\n",
