--- a/Dag3-pandas/8-Oppsummering.ipynb
+++ b/Dag3-pandas/8-Oppsummering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f1bc2009",
+   "id": "1c30e989",
    "metadata": {},
    "source": [
     "### Husk Boller og koding på onsdag\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a38319ef",
+   "id": "bc8460c6",
    "metadata": {},
    "source": [
     "### Noen som har startet med?\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17ba589b",
+   "id": "047ec837",
    "metadata": {},
    "source": [
     "### Forslag til videre kurstemaer (må avtales med HR):\n",
@@ -36,12 +36,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "daff2c9e",
+   "id": "89c25ee7",
    "metadata": {},
    "source": [
     "### Anbefalt lesning: Medium.com / Towards data science\n",
     "https://medium.com/search?q=pandas%20basics"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bad28d5e",
+   "metadata": {},
+   "source": [
+    "##### Bonus: Animerte plots i plotly?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7accfd3e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
